# cicaklang

./: .gitignore  Cargo.toml  ok.cck
.idx/: dev.nix
src/: consts.rs  error.rs  lex.rs  lib.rs  main.rs  util.rs
